--- a/201808_Review.md
+++ b/201808_Review.md
@@ -1,15 +1,15 @@
 #### 8/24 Friday
-* I wanted to protect it from getting dinged up if I drop it.
-* I can tuck a credit card into the case.
-* I don't need to have my wallet n me.
-* The ring functions as a phone cradle, so I can prop up my phone on a table and watch videos.
-* It can be adjusted to fit any phone, and it charges the phone.
-* It's great because I can charge my phone while using a sat-nav app as I drive.
-* Feel free to contact me personally if something is bugging you
-* Please pay attention to how you come across, as there is a lot riding on this deal.
-* Do you have a second to talk?
-* I just wanted to say how much I appreciate the help you gave me with the budget reports.
-* Hey, that' no trouble. We're all on the same team.
-* Something's been bugging me, and I couldn't think of anyone who can deal with it better than you.
-* He's not getting along with the rest of the team.
-* I have to say he come across as a bit of an odd guy
+* I wanted to protect it from **getting dinged up** if I drop it.
+* I can **tuck** a credit card into the case.
+* I don't need to have my **wallet on me.**
+* The ring **functions as a** phone cradle, so I can **prop up** my phone on a table and watch videos.
+* **It can be adjusted to** fit any phone, and it charges the phone.
+* It's great because I can charge my phone while using a sat-nav app **as I drive.**
+* Feel free to contact me personally **if something is bugging you.**
+* Please pay attention to how you **come across**, as **there is a lot riding on this deal.**
+* **Do you have a second to talk?**
+* I just wanted to say **how much I appreciate the help you gave me** with the budget reports.
+* Hey, that' no trouble. **We're all on the same team.**
+* **Something's been bugging me**, and I couldn't think of anyone who can deal with it better than you.
+* **He's not getting along with the rest of the team.**
+* I have to say **he come across** as a bit of an odd guy
